# winapi-common

./: .appveyor.yml  .clang-format  .git-blame-ignore-revs  .gitmodules  CMakeLists.txt  Makefile  README.md  annotated.html  buffer_8hpp_source.html  classes.html  classwinapi_1_1Buffer-members.html  classwinapi_1_1Buffer.html  classwinapi_1_1CanonicalPath-members.html  classwinapi_1_1CanonicalPath.html  classwinapi_1_1CommandLine-members.html  classwinapi_1_1CommandLine.html  classwinapi_1_1File-members.html  classwinapi_1_1File.html  classwinapi_1_1Handle-members.html  classwinapi_1_1Handle.html  classwinapi_1_1Pipe-members.html  classwinapi_1_1Pipe.html  classwinapi_1_1Process-members.html  classwinapi_1_1Process.html  classwinapi_1_1SharedMemory-members.html  classwinapi_1_1SharedMemory.html  classwinapi_1_1SharedObject-members.html  classwinapi_1_1SharedObject.html  classwinapi_1_1Sid-members.html  classwinapi_1_1Sid.html  classwinapi_1_1error_1_1CategoryWindows-members.html  classwinapi_1_1error_1_1CategoryWindows.html  cmd__line_8cpp_source.html  cmd__line_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f1714771db42b7b5a0cd2ebe6e9736ed.html  error_8cpp_source.html  error_8hpp.html  error_8hpp_source.html  (+47 more)
.github/workflows/: ci.yml
include/winapi/: buffer.hpp  cmd_line.hpp  error.hpp  file.hpp  handle.hpp  path.hpp  pipe.hpp  process.hpp  process_io.hpp  resource.hpp  shmem.hpp  sid.hpp  stream.hpp  utils.hpp  window_style.hpp  workarounds.hpp
search/: all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  (+3 more)
src/: CMakeLists.txt  cmd_line.cpp  error.cpp  file.cpp  handle.cpp  path.cpp  pipe.cpp  process.cpp  process_io.cpp  shmem.cpp  sid.cpp  stream.cpp
test/: CMakeLists.txt  args.cpp  echo.cpp  handle.cpp  main.cpp
test/unit_tests/: CMakeLists.txt  cmd_line.cpp  console.cpp  error.cpp  fixtures.hpp  handle.cpp  process.cpp  process_worker.cpp  resource.cpp  resource.rc  resource_ids.h  shmem.cpp  sid.cpp
test/unit_tests/shared/: command.hpp  console.hpp  fixed_size.hpp  test_data.hpp  worker.hpp
test/unit_tests/worker/: worker.cpp
